# pattern-recognition

./: .gitignore  README.md  patternRecogn.cabal  testLina.cabal
app/: Main.hs  Plot.hs  TestMultiple.hs  Types.hs
doc/: Uebung1.md  Uebung3.md  Uebung6.md  Uebung8.md  UebungX.md
doc/createPDF/: generate.sh  header
examplePlots/1/: log.txt
examplePlots/2/: log.txt
examplePlots/3/: log
scripts/: run.sh  runAndLog.sh  run_test.sh  testAndProf.sh  test_neuralNetworks.sh
src/: PatternRecogn.hs
src/PatternRecogn/: ExampleClassificationAlgorithm.hs  ExpectationMax.hs  Gauss.hs  Lina.hs  LinearRegression.hs  NearestNeighbours.hs  NeuronalNetworks.hs  Perceptron.hs  Types.hs  Utils.hs
src/PatternRecogn/Gauss/: Binary.hs  Classify.hs  Projected.hs  Types.hs  Utils.hs
src/PatternRecogn/NeuronalNetworks/: TrainingMonad.hs  Types.hs
src/PatternRecogn/Types/: Conversions.hs  Types.hs
test/: AbstractTest.hs  GaussTest.hs  LinearRegressionTest.hs  LoadTestData.hs  NearestNeighboursTest.hs  NeuralNetworksTest.hs  Plot.hs  ProjectedGaussTest.hs  TestBinary.hs  TestFunctions.hs  TestMultiple.hs  Types.hs  Utils.hs
test/NeuralNetworksTest/: TestImpl.hs
