name:                patternRecogn
version:             0.1.0.0
synopsis:            pattern recognition examples in haskell
description:         Please see README.md
homepage:            https://github.com/githubuser/testLina#readme
license:             BSD3
license-file:        LICENSE
author:              EsGeh
maintainer:          SamuelGfroerer@googlemail.com
copyright:           Samuel Gfrörer
category:            AI
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable patternRecogn-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wno-tabs
  build-depends:
    patternRecogn
    , base
    , hmatrix
    , cassava
    , mtl
    , bytestring
    , vector
    , Chart
    , Chart-diagrams
    , data-default-class
    , lens
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

library
  hs-source-dirs:      src
  exposed-modules:
    PatternRecogn
    , PatternRecogn.ExpectationMax
  other-modules:
  ghc-options:
    -rtsopts -with-rtsopts=-N -Wno-tabs
  build-depends:
    base
    , hmatrix
    , mtl
    , vector
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

test-suite patternRecogn-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , testLina
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/testLina
