name:                patternRecogn
version:             0.1.0.0
synopsis:            pattern recognition examples in haskell
description:         Please see README.md
homepage:            https://github.com/EsGeh/pattern-recognition
license:             BSD3
license-file:        LICENSE
author:              EsGeh
maintainer:          SamuelGfroerer@googlemail.com
copyright:           Samuel Gfrörer
category:            AI
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable patternRecogn-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wno-tabs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

library
  hs-source-dirs:      src
  exposed-modules:
    PatternRecogn
    , PatternRecogn.Types
    , PatternRecogn.Lina
    , PatternRecogn.Utils
    -- Gauß classification:
    , PatternRecogn.Gauss.Binary
    , PatternRecogn.Gauss.Types
    , PatternRecogn.Gauss.Utils
		-- linear regression classification:
    , PatternRecogn.LinearRegression
		-- perceptron learning classification:
    , PatternRecogn.Perceptron
		-- neuronal networks:
    , PatternRecogn.NeuronalNetworks
  other-modules:
  ghc-options:
    -Wno-tabs
  build-depends:
    base
    , hmatrix
    , mtl
    , vector
    , MonadRandom
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

test-suite neuralNetworks-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             NeuralNetworksTest.hs
  other-modules:
    Types
    , TestBinary
    , TestMultiple
    , Plot
  build-depends:
    patternRecogn
    , base >= 4.7 && < 5
    , hmatrix
    , cassava
    , mtl
    , bytestring
    , vector
    , Chart
    , Chart-diagrams
    , data-default-class
    , lens
    , MonadRandom
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wno-tabs
  default-language:    Haskell2010


test-suite patternRecogn-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , patternRecogn
  ghc-options:         -threaded
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/EsGeh/pattern-recognition
